<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dictionary"
        android:icon="@drawable/ic_dictionary"
        android:title="@string/title_dictionary" />

    <item
        android:id="@+id/navigation_gloss"
        android:icon="@drawable/ic_gloss"
        android:title="@string/title_gloss" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_quiz"
        android:title="@string/title_quiz" />

</menu>
