...

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
...
